Add production environment configuration and update Vercel settings

--- a/GigCalendar - Frontend/vercel.json
+++ b/GigCalendar - Frontend/vercel.json
@@ -14,5 +14,9 @@
         "outputDirectory": "dist"
       }
     }
-  ]
+  ],
+  "env": {
+    "VITE_API_URL": "https://gig-calendar-app-api.vercel.app/api",
+    "VITE_WS_URL": "wss://gig-calendar-app-api.vercel.app"
+  }
 }
