--- a/GigCalendar - Frontend/package.json
+++ b/GigCalendar - Frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "vercel-build": "npm install && npm run build",
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "tsx server/index.ts"
