--- a/GigCalendar - Frontend/.env.production
+++ b/GigCalendar - Frontend/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=/api
-VITE_WS_URL=/api
+VITE_API_URL=https://gig-calendar-app-api.vercel.app
+VITE_WS_URL=https://gig-calendar-app-api.vercel.app
