--- a/GigCalendar-API/vercel.json
+++ b/GigCalendar-API/vercel.json
@@ -8,6 +8,14 @@
   ],
   "routes": [
     {
+      "src": "/socket.io/(.*)",
+      "dest": "server.js"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "server.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "server.js"
     }
