--- a/GigCalendar-API/package.json
+++ b/GigCalendar-API/package.json
@@ -10,6 +10,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.3",
     "octokit": "^4.0.2",
     "socket.io": "^4.7.2"
   },
